--- a/chessaton_description/config/initial_joint_positions.yaml
+++ b/chessaton_description/config/initial_joint_positions.yaml
@@ -1,9 +1,9 @@
 initial_joint_positions:
-  panda_arm:
+  chessaton_arm:
     joint1: 0.0
     joint2: 0.0
     joint3: 0.0
     joint4: 0.0
-  panda_gripper:
+  chessaton_hand:
     joint1: 0.0
     joint2: 0.0
