--- a/chessaton_moveit_config/config/kinematics.yaml
+++ b/chessaton_moveit_config/config/kinematics.yaml
@@ -1,4 +1,8 @@
 chessaton_arm:
   kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
-  kinematics_solver_search_resolution: 0.0050000000000000001
-  kinematics_solver_timeout: 0.0050000000000000001
+  # kinematics_solver: cached_ik_kinematics_plugin/CachedKDLKinematicsPlugin
+  # kinematics_solver: lma_kinematics_plugin/LMAKinematicsPlugin
+  kinematics_solver_search_resolution: 0.0025
+  kinematics_solver_timeout: 0.05
+  kinematics_solver_attempts: 5
+  # max_cache_size: 100000
