--- a/chessaton_chessaton_arm_ikfast_plugin/package.xml
+++ b/chessaton_chessaton_arm_ikfast_plugin/package.xml
@@ -17,6 +17,7 @@
   <exec_depend>pluginlib</exec_depend>
   <exec_depend>moveit_core</exec_depend>
   <export>
+    <build_type>ament_cmake</build_type>
     <moveit_core plugin="${prefix}/chessaton_chessaton_arm_moveit_ikfast_plugin_description.xml"/>
   </export>
 </package>
