Add: made a simple world with a small blue box and a green wall to display the move to position demo

--- a/chessaton_control/CMakeLists.txt
+++ b/chessaton_control/CMakeLists.txt
@@ -87,7 +87,7 @@ endif()
 # )
 
 # Install directories
-install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY launch world DESTINATION share/${PROJECT_NAME})
 
 # Setup the project
 ament_package()
