--- a/chessaton_control/CMakeLists.txt
+++ b/chessaton_control/CMakeLists.txt
@@ -49,18 +49,18 @@ ament_target_dependencies(
 install(TARGETS move_group_demo
   DESTINATION lib/${PROJECT_NAME})
 
-add_executable(pick_place_demo src/pick_place_demo.cpp)
-# target_include_directories(pick_place_demo PUBLIC
+add_executable(mtc_pick_place_demo src/mtc_pick_place_demo.cpp)
+# target_include_directories(mtc_pick_place_demo PUBLIC
 #   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 #   $<INSTALL_INTERFACE:include>)
-target_compile_features(pick_place_demo PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
+target_compile_features(mtc_pick_place_demo PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
 ament_target_dependencies(
-  pick_place_demo
+  mtc_pick_place_demo
   "moveit_task_constructor_core"
   "rclcpp"
 )
 
-install(TARGETS pick_place_demo
+install(TARGETS mtc_pick_place_demo
   DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
@@ -75,9 +75,9 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-# add_executable(chessaton_pick_place_demo src/pick_place_demo.cpp)
+# add_executable(chessaton_pick_place_demo src/mtc_pick_place_demo.cpp)
 # ament_target_dependencies(chessaton_pick_place_demo moveit_task_constructor_core rclcpp)
-# set_target_properties(chessaton_pick_place_demo PROPERTIES OUTPUT_NAME pick_place_demo PREFIX "")
+# set_target_properties(chessaton_pick_place_demo PROPERTIES OUTPUT_NAME mtc_pick_place_demo PREFIX "")
 # target_include_directories(chessaton_pick_place_demo PUBLIC
 # $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 # $<INSTALL_INTERFACE:include>)
@@ -87,7 +87,7 @@ endif()
 # )
 
 # Install directories
-install(DIRECTORY launch world DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY launch world rviz DESTINATION share/${PROJECT_NAME})
 
 # Setup the project
 ament_package()
