--- a/chessaton_control/CMakeLists.txt
+++ b/chessaton_control/CMakeLists.txt
@@ -34,19 +34,18 @@ find_package(rclcpp REQUIRED)
 #   COMMAND ${${PROJECT_NAME}_MOVEIT_CONFIG_SCRIPTS_DIR}/xacro2srdf.bash
 # )
 
-add_executable(move_group_demo src/move_group_demo.cpp)
-# target_include_directories(move_group_demo PUBLIC
-#   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-#   $<INSTALL_INTERFACE:include>)
-target_compile_features(move_group_demo PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
+add_executable(movep_demo src/action_handler.cpp src/movep_demo.cpp)
+target_include_directories(movep_demo PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>)
+target_compile_features(movep_demo PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
 ament_target_dependencies(
-  move_group_demo
+  movep_demo
   "moveit_ros_planning_interface"
   "moveit_visual_tools"
   "rclcpp"
 )
-
-install(TARGETS move_group_demo
+install(TARGETS movep_demo
   DESTINATION lib/${PROJECT_NAME})
 
 add_executable(mtc_pick_place_demo src/mtc_pick_place_demo.cpp)
@@ -59,7 +58,6 @@ ament_target_dependencies(
   "moveit_task_constructor_core"
   "rclcpp"
 )
-
 install(TARGETS mtc_pick_place_demo
   DESTINATION lib/${PROJECT_NAME})
 
