--- a/chessaton_description/config/controllers_position.yaml
+++ b/chessaton_description/config/controllers_position.yaml
@@ -8,11 +8,13 @@ controller_manager:
     chessaton_arm_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
-    chessaton_finger_left_controller:
-      type: position_controllers/GripperActionController
+    chessaton_hand_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
+    # chessaton_finger_left_controller:
+    #   type: position_controllers/GripperActionController
 
-    chessaton_finger_right_controller:
-      type: position_controllers/GripperActionController
+    # chessaton_finger_right_controller:
+    #   type: position_controllers/GripperActionController
 
 
 
@@ -23,6 +25,8 @@ chessaton_arm_controller:
       - chessaton_joint2
       - chessaton_joint3
       - chessaton_joint4
+      - chessaton_hand_tcp_roll_virtual_joint
+      - chessaton_hand_tcp_yaw_virtual_joint
     command_interfaces:
       - position
     state_interfaces:
@@ -38,11 +42,32 @@ chessaton_arm_controller:
       chessaton_joint2: { trajectory: 0.2, goal: 0.1 }
       chessaton_joint3: { trajectory: 0.2, goal: 0.1 }
       chessaton_joint4: { trajectory: 0.2, goal: 0.1 }
+      chessaton_hand_tcp_yaw_virtual_joint: { trajectory: 0.2, goal: 0.1 }
+      chessaton_hand_tcp_yaw_virtual_joint: { trajectory: 0.2, goal: 0.1 }
 
-chessaton_finger_right_controller:
+chessaton_hand_controller:
   ros__parameters:
-    joint: right_finger_joint
+    joints:
+      - right_finger_joint
+      - left_finger_joint
+    command_interfaces:
+      - position
+    state_interfaces:
+      - position
+      - velocity
+    state_publish_rate: 100.0
+    action_monitor_rate: 20.0
+    allow_partial_joints_goal: false
+    constraints:
+      stopped_velocity_tolerance: 0.2
+      goal_time: 0.0
+      left_finger_joint: { trajectory: 0.2, goal: 0.1 }
+      right_finger_joint: { trajectory: 0.2, goal: 0.1 }
 
-chessaton_finger_left_controller:
-  ros__parameters:
-    joint: left_finger_joint
+# chessaton_finger_right_controller:
+#   ros__parameters:
+#     joint: right_finger_joint
+
+# chessaton_finger_left_controller:
+#   ros__parameters:
+#     joint: left_finger_joint
