Modify: since the planning is failing for points with quaternion and fixed by adding 2 dummy joints for tcp i replaced my 4dof iksolver with KDL for 6dof (both are functional but can't make pose plans with 4dof one)

--- a/chessaton_moveit_config/config/joint_limits.yaml
+++ b/chessaton_moveit_config/config/joint_limits.yaml
@@ -28,6 +28,16 @@ joint_limits:
     max_velocity: 60.0
     has_acceleration_limits: true
     max_acceleration: 5.0
+  chessaton_hand_tcp_roll_virtual_joint:
+    has_velocity_limits: true
+    max_velocity: 60.0
+    has_acceleration_limits: true
+    max_acceleration: 5.0
+  chessaton_hand_tcp_yaw_virtual_joint:
+    has_velocity_limits: true
+    max_velocity: 60.0
+    has_acceleration_limits: true
+    max_acceleration: 5.0
   left_finger_joint:
     has_velocity_limits: true
     max_velocity: 60.0
