--- a/chessaton_control/package.xml
+++ b/chessaton_control/package.xml
@@ -29,6 +29,7 @@
     <exec_depend>chessaton_description</exec_depend>
     <exec_depend>chessaton_chessaton_arm_ikfast_plugin</exec_depend>
     <exec_depend>chessaton_moveit_config</exec_depend>
+    <exec_depend>chessaton_interfaces</exec_depend>
     <exec_depend>controller_manager</exec_depend>
     <exec_depend>moveit_configs_utils</exec_depend>
     <exec_depend>moveit_ros_move_group</exec_depend>
@@ -42,6 +43,11 @@
     <exec_depend>tf2_ros</exec_depend>
     <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->
     <exec_depend>xacro</exec_depend>
+
+    <build_depend>rosidl_default_generators</build_depend>
+    <depend>geometry_msgs</depend>
+    <member_of_group>rosidl_interface_packages</member_of_group>
+    <exec_depend>rosidl_default_runtime</exec_depend>
 
     <export>
         <build_type>ament_cmake</build_type>
