--- a/chessaton_chess_manager/package.xml
+++ b/chessaton_chess_manager/package.xml
@@ -12,22 +12,22 @@
 
     <buildtool_depend>ament_cmake</buildtool_depend>
 
+    <exec_depend>chessaton_description</exec_depend>
+    <exec_depend>chessaton_chessaton_arm_ikfast_plugin</exec_depend>
+    <!-- <exec_depend>chessaton_control</exec_depend> -->
     <exec_depend>moveit_ros_move_group</exec_depend>
     <exec_depend>moveit_kinematics</exec_depend>
     <exec_depend>moveit_planners</exec_depend>
     <exec_depend>moveit_simple_controller_manager</exec_depend>
-    <exec_depend>joint_state_publisher</exec_depend>
-    <exec_depend>joint_state_publisher_gui</exec_depend>
-    <exec_depend>tf2_ros</exec_depend>
-    <exec_depend>xacro</exec_depend>
-    <exec_depend>chessaton_description</exec_depend>
-    <exec_depend>chessaton_chessaton_arm_ikfast_plugin</exec_depend>
-    <exec_depend>controller_manager</exec_depend>
     <exec_depend>moveit_configs_utils</exec_depend>
     <exec_depend>moveit_ros_move_group</exec_depend>
     <exec_depend>moveit_ros_visualization</exec_depend>
     <exec_depend>moveit_ros_warehouse</exec_depend>
     <exec_depend>moveit_setup_assistant</exec_depend>
+    <exec_depend>joint_state_publisher</exec_depend>
+    <exec_depend>joint_state_publisher_gui</exec_depend>
+    <exec_depend>tf2_ros</exec_depend>
+    <exec_depend>controller_manager</exec_depend>
     <exec_depend>robot_state_publisher</exec_depend>
     <exec_depend>rviz2</exec_depend>
     <exec_depend>rviz_common</exec_depend>
