Add: a node to run the chess engine and retrieve the engine reponse as a service msg

--- a/chessaton_interfaces/CMakeLists.txt
+++ b/chessaton_interfaces/CMakeLists.txt
@@ -26,6 +26,8 @@ set(msg_files
 
 set(srv_files
     "srv/BoxPositions.srv"
+    "srv/GetBestMove.srv"
+    "srv/SetState.srv"
     DEPENDENCIES geometry_msgs
 )
 
