--- a/chessaton_chess_manager/package.xml
+++ b/chessaton_chess_manager/package.xml
@@ -14,6 +14,9 @@
 
     <exec_depend>chessaton_description</exec_depend>
     <exec_depend>chessaton_chessaton_arm_ikfast_plugin</exec_depend>
+    <exec_depend>chessaton_moveit_config</exec_depend>
+    <exec_depend>chessaton_interfaces</exec_depend>
+    <exec_depend>chessaton_control</exec_depend>
     <!-- <exec_depend>chessaton_control</exec_depend> -->
     <exec_depend>moveit_ros_move_group</exec_depend>
     <exec_depend>moveit_kinematics</exec_depend>
@@ -35,6 +38,11 @@
     <exec_depend>tf2_ros</exec_depend>
     <exec_depend>warehouse_ros_mongo</exec_depend>
     <exec_depend>xacro</exec_depend>
+
+    <build_depend>rosidl_default_generators</build_depend>
+    <depend>geometry_msgs</depend>
+    <member_of_group>rosidl_interface_packages</member_of_group>
+    <exec_depend>rosidl_default_runtime</exec_depend>
 
     <export>
         <build_type>ament_cmake</build_type>
